@@ -2,6 +2,7 @@ from ucommon 3.3.2 to 3.3.3
 - process detach and restart handling.
 - more complete string to numeric conversions.
 - syms were not initialized in all shell constructors.
+- some inline templates that contain generic values redone as typename.
 
 from ucommon 3.3.1 to 3.3.2
 - shell debug message logging output.
